fix scrolling not working on mobile

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -67,6 +67,10 @@ html {
 	--padding-page--negative: calc(var(--padding-page) * -1);
 }
 
+html {
+	overflow-y: scroll;
+}
+
 html,
 body {
 	min-height: 100vh;
